refactor: getFirst 호출 제거